--- a/app/views/bed.html.erb
+++ b/app/views/bed.html.erb
@@ -11,8 +11,8 @@
     <%= link_to  "/#{@locale}/suites.html" do  %>
       <%= t("suites.short") %> 
       <img src="/images/sun_small.jpg"  
-          alt=<%=t('suites')%>  
-          height=187px  width=250px />
+          alt=<%=t('suites.short')%>  
+          height="187px"  width="250px" />
           <%end%>
     <br/>
     <%=t('bed.suites')%>
@@ -21,8 +21,8 @@
     <%= link_to "/#{@locale}/deluxe.html" do %>
     <%= t("deluxe.short") %> 
       <img src="/images/orange_small.jpg"  
-          alt=<%=t('deluxe')%>  
-          height=187px  width=250px />
+          alt=<%=t('deluxe.short')%>  
+          height="187px"  width="250px" />
           <%end%>
     <br/>
     <%=t('bed.deluxe')%>
@@ -31,8 +31,8 @@
     <%= link_to "/#{@locale}/standard.html" do %>
     <%= t("standard.short") %> 
       <img src="/images/rose_small.jpg"  
-          alt="<%=t('standard')%>"  
-          height=187px  width=250px />
+          alt="<%=t('standard.short')%>"  
+          height="187px"  width="250px" />
           <%end%>
     <br/>
     <%=t('bed.standard')%>
