--- a/app/views/groups.html.erb
+++ b/app/views/groups.html.erb
@@ -2,9 +2,9 @@
   <img src ="/images/sali.gif" width=450px height=336px/>
 </div>
 <div class="left2">
-  <img src ="/images/allas.jpg">
-  <img src ="/images/blank.gif" height="1px" width="140px">
-  <img src ="/images/garden_group.jpg" height="196" width="140px">
+  <img src ="/images/allas.jpg" alt="allas" />
+  <img src ="/images/blank.gif" height="1px" width="140px" alt="blank"/>
+  <img src ="/images/garden_group.jpg" height="196" width="140px" alt="garden"/>
 </div>
 <div class="right">
   <%=raw t "groups.right" %>
