--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
 
   <div id="header">
       <div class="centre">
-      <img src="/images/logo_iso.png" alt="Villa Taika logo"/>
+        <img src="/images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
       <div id="slogan"><%=t("slogan")%></div>
   </div>
@@ -73,12 +73,10 @@
 
   <div id="rcol">
     <div id="rcontent">
-
       <%= yield %>
-
+    </div>
+    <div class="divider"></div>
   </div>
-  <div class="divider"></div>
-
 </div>
 
 <div id="footer">
@@ -94,7 +92,7 @@
   </div>
   <div class="kolmas">
     <a href="/<%=@locale%>/index.html">
-    <img alt="" src="/images/logo_pien.gif" border="0" height="33" width="198"/>
+    	<img alt="" src="/images/logo_pien.gif" border="0" height="33" width="198"/>
     </a>
   </div>
 </div>
