--- a/app/views/photos.html.erb
+++ b/app/views/photos.html.erb
@@ -2,7 +2,7 @@
 <div class="photo_box_<%=photo.split('_').first%>">
   <div class="eiole">
     <a href="/photos/large/<%=photo%>.jpg" rel="lightbox[photos]" title="<%=t "."+photo%>">
-      <img src="/photos/<%=photo%>.jpg"  >
+      <img src="/photos/<%=photo%>.jpg" alt="<%=t "."+photo%>"/>
     </a><br/>
     <%=t "."+photo%>
   </div>
