--- a/app/views/suites.html.erb
+++ b/app/views/suites.html.erb
@@ -3,7 +3,7 @@
     <div class="box_inner">
       <div class="captioned_image">
         <a href="/images/<%=room%>.jpg" rel="lightbox[suites]" title="<%=t(room+".short")%>">
-          <img src="/images/<%=room%>_small.jpg" >
+          <img src="/images/<%=room%>_small.jpg" />
         </a>
       </div>
       <h2> <%= t("#{room}.short")%> </h2>
