--- a/app/views/activities.html.erb
+++ b/app/views/activities.html.erb
@@ -4,7 +4,7 @@
   <div class="box_inner">
       <a href="/activities/large/<%=activity%>.jpg" rel="lightbox[activity]" title="<%= t(".#{activity}.short")%>">
 	    <h2> <%= t(".#{activity}.short")%> </h2>
-        <img src="/activities/<%=activity%>.jpg" >
+        <img src="/activities/<%=activity%>.jpg" alt="<%= t(".#{activity}.short")%>"/>
         </a>
     <%=raw t(".#{activity}.rest")%>
   </div>
