--- a/villataika.fi/stylesheets/stylesheet.css
+++ b/villataika.fi/stylesheets/stylesheet.css
@@ -7,7 +7,7 @@ padding: 0px;
 
 body
 {
-color: black;
+background-color: #fff;
 font-size: 14px;
 font-family: georgia, "times new roman", serif;
 }
