--- a/app/views/bed.html.erb
+++ b/app/views/bed.html.erb
@@ -1,13 +1,13 @@
-<div class="wide_bed_box">
-  <div class="bed_box">
+<div class="wide_bedbox">
+  <div class="bedbox">
       <%=raw t("bed.one")%>
   </div>
 </div>
 <div class="divider"></div>
 
-<div class="wide_box">
+<div class="widebox">
     <br/>
-  <div class="small_box">
+  <div class="smallbox">
     <%= link_to  "/#{@locale}/suites.html" do  %>
       <%= t("suites.short") %> 
       <img src="/images/sun_small.jpg"  
@@ -17,7 +17,7 @@
     <br/>
     <%=t('bed.suites')%>
   </div>
-  <div class="small_box">
+  <div class="smallbox">
     <%= link_to "/#{@locale}/deluxe.html" do %>
     <%= t("deluxe.short") %> 
       <img src="/images/orange_small.jpg"  
@@ -27,7 +27,7 @@
     <br/>
     <%=t('bed.deluxe')%>
   </div>
-  <div class="small_box">
+  <div class="smallbox">
     <%= link_to "/#{@locale}/standard.html" do %>
     <%= t("standard.short") %> 
       <img src="/images/rose_small.jpg"  
@@ -39,8 +39,8 @@
   </div>
 </div>
 <br/>
-<div class="wide_bed_box">
-  <div class="bed_box">
+<div class="wide_bedbox">
+  <div class="bedbox">
       <%=raw t("bed.two")%>
   </div>
   
