--- a/app/views/news.html.erb
+++ b/app/views/news.html.erb
@@ -1,5 +1,5 @@
 <% news.each do |ne| %>
-<div class="news_box">
+<div class="newsbox">
   <div class="box_inner">
     <% unless t(".#{ne}.image").index("missing") %>
       <div class="captioned_image">
