--- a/villataika.fi/stylesheets/stylesheet.css
+++ b/villataika.fi/stylesheets/stylesheet.css
@@ -1,21 +1,27 @@
 
+*
+{
+margin: 0px;
+padding: 0px;
+}
 
 body
 {
-  font-size: 14px;
-  font-family: georgia, "times new roman", serif;
-  background: white;
+background-color: #fff;
+color: black;
+font-size: 14px;
+font-family: georgia, "times new roman", serif;
 }
 
 a
 {
 text-decoration: none;
 font-weight: bold;
-color: #008495;
+color: rgb(0, 132, 149);
 }
 
 #news a {
-text-decoration: none;  
+text-decoration: none;	
 color: #9f9f9f;
 }
 
@@ -35,8 +41,8 @@ color: #50514D;
 {
 width: 100%;
 height: 104px;
+background-color: #ffffff;
 color: #ffffff;
-  background: #ffffff;
 }
 
 #header_inner
@@ -71,10 +77,10 @@ color: #DADADA;
 position: relative;
 bottom: 7px;
 font-size: 13px;
-color: #008495;
+color: rgb(0, 132, 149);
 text-align: right;
-  margin-right: 30px;
-  font-style: italic;
+	margin-right: 30px;
+	font-style: italic;
 }
 
 div.right {
@@ -113,16 +119,18 @@ margin: 0px;
 
 #menu li
 {
-background: inherit url('../images/bbg0.gif');
+background: none;
 padding: 0px;
 font-weight: bold;
 width: 165px;
 height: 38px;
+background: inherit;
+background-image: url('../images/bbg0.gif');
 }
 
 
 #menu ul li.active {
-  background: url('../images/bbg2.gif') ;
+  background-image: url('../images/bbg2.gif');
 }
 
 #menu a
@@ -155,13 +163,13 @@ height: 7px;
 
 #menu li:hover
 {
-  background: url('../images/bbg1.gif') ;
+background-image: url('../images/bbg1.gif');
 }
 
 #menu_end
 {
 height: 30px;
-background: url('../images/a2.gif');
+background-image: url('../images/a2.gif');
 }
 
 h1
@@ -197,7 +205,7 @@ background: url('../images/a3.gif') repeat-x 0px 17px;
 h3 span
 {
 background: inherit;
-color: #008495
+color: rgb(0, 132, 149)
 }
 
 h3.first
@@ -241,9 +249,9 @@ background: url('../images/li_high.gif') no-repeat;
 }
 
 #rcontent div.right ul {
-  font-size: 1.1em;
-  word-spacing: 3px;
-  line-height: 20px;
+	font-size: 1.1em;
+	word-spacing: 3px;
+	line-height: 20px;
 }
 
 p
@@ -297,7 +305,8 @@ background-position: 0px 5px;
 position: relative;
 margin-left: 170px;
 width: 885px;
-background: url('../images/a2.gif') repeat-x;
+background-image: url('../images/a2.gif');
+background-repeat: repeat-x;
 }
 
 #slogan2
@@ -307,7 +316,7 @@ position: relative;
 top: -5px;
 }
 
-.news_box
+.newsbox
 {
 position: relative;
 background: inherit;
@@ -315,7 +324,7 @@ color: #AAB162;
 height: 120px;
 }
 
-.activity_box
+.activitybox
 {
 float: left;
 position: relative;
@@ -333,7 +342,7 @@ height: 180px;
 
 .box h2
 {
-color: #008495;
+color: rgb(0, 132, 149);
 font-weight: normal;
 font-size: 20px;
 margin-bottom: 5px
@@ -349,11 +358,11 @@ line-height: 1.4em;
 
 }
 
-#rcontent div.activity_box div.box_inner {
-padding-top: 5px;  
-padding-left: 5px;  
+#rcontent div.activitybox div.box_inner {
+padding-top: 5px;	
+padding-left: 5px;	
 padding-top: 5px;
-  text-align: justify;
+	text-align: justify;
 }
 
 .captioned_image
@@ -372,7 +381,7 @@ bottom: 0px;
 left: 0px;
 }
 
-.photo_box_w{
+.photobox_w{
   border: solid 1px #fff;
   padding: 5px;
   padding-bottom: 10px;
@@ -384,10 +393,10 @@ left: 0px;
   width: 232px;
   height: 170px;
   float: left;
-  text-align: center;
+	text-align: center;
 }
 
-.photo_box_h{
+.photobox_h{
   border: solid 1px #fff;
   padding: 5px;
   margin-right: 12px;
@@ -402,51 +411,51 @@ left: 0px;
 }
 
 div.centre {
-  text-align: center;
+	text-align: center;
 }
 div#lotus {
-  height: 450px;
-  width: 330px;
-  float: left;
-  position: relative;
+	height: 450px;
+	width: 330px;
+	float: left;
+	position: relative;
 }
 
 div#aurinko {
-  width: 265px;
-  float: left;
-  position: relative;
+	width: 265px;
+	float: left;
+	position: relative;
 }
 
 #extra {
-  width: 200px;
-  height: 330px;
-  bottom: 0;
-  float: left;  
-  margin-left: 0px;
-  padding-right: 10px;
-  position: relative;
+	width: 200px;
+	height: 330px;
+	bottom: 0;
+	float: left;	
+	margin-left: 0px;
+	padding-right: 10px;
+	position: relative;
 }
 
 div#aurinko_wrapper {
-  height: 330px;
-  width: 500px;
-  margin-left:0px;
-  float: left;
-  position: relative;
+	height: 330px;
+	width: 500px;
+	margin-left:0px;
+	float: left;
+	position: relative;
 }
 
 .bottom {
-  bottom: 0;
-  padding-top: 22px;
+	bottom: 0;
+	padding-top: 22px;
 }
 
 div#main_text {
-  font-weight: bold; 
-  font-size: 16px;
-  color: #008495;
-    width: 510px;
-  position: relative;
-  float:  left;
+	font-weight: bold; 
+	font-size: 16px;
+	color: rgb(0, 132, 149);
+  	width: 510px;
+	position: relative;
+	float:  left;
 }
 
 .sub_text {
@@ -459,36 +468,36 @@ div#main_text {
 }
 
 div.kolmas {
-  width: 33%;
-  float: left;
+	width: 33%;
+	float: left;
 }
 .top {
-  top: 0;
+	top: 0;
 }
 
 .left {
 }
 
-.wide_box {
+.widebox {
   width: 100%;
   height: 250px;
 }
 
-.small_box {
+.smallbox {
   width: 285px;
   float: left;
 }
 
-.small_box2 {
+.smallbox2 {
   width: 210px;
-  float: left;
+	float: left;
 }
 
-.small_box img {
+.smallbox img {
   border: 2px solid #c1cabb;
 }
 
-.small_box2 img {
+.smallbox2 img {
   border: 2px solid #c1cabb;
 }
 
@@ -499,16 +508,16 @@ div.room_header {
 }
 
 img {
-  border-style: none;
+	border-style: none;
 }
 
-#rcontent div.activity_box div.box_inner a img {
-  float: left;
-  margin-right: 10px;
+#rcontent div.activitybox div.box_inner a img {
+	float: left;
+	margin-right: 10px;
 }
 
-#rcontent div.activity_box div.box_inner a h2 {
-  margin-bottom: 10px;
+#rcontent div.activitybox div.box_inner a h2 {
+	margin-bottom: 10px;
 }
 
 #footer
@@ -525,6 +534,6 @@ line-height: 18px;
 
 #rcontent div.line {
 border-bottom: solid 1px #c0dce0;
-  float: left;
-  width : 100%;
+	float: left;
+	width : 100%;
 }
