--- a/app/views/activities.html.erb
+++ b/app/views/activities.html.erb
@@ -1,6 +1,6 @@
 <% activities.each_with_index do |activity , index| %>
 
-<div class="activity_box">
+<div class="activitybox">
   <div class="box_inner">
       <a href="/activities/large/<%=activity%>.jpg" rel="lightbox[activity]" title="<%= t(".#{activity}.short")%>">
 	    <h2> <%= t(".#{activity}.short")%> </h2>
