--- a/app/views/index.html.erb
+++ b/app/views/index.html.erb
@@ -4,7 +4,7 @@
   </a>
 </div>
 
-<div id="aurinko_wrapper">
+<div id="aurinkowrapper">
   
   <div id="aurinko">
     <a href='/<%=@locale%>/suites.html'>
@@ -21,11 +21,11 @@
     </div>
   </div>
 
-  <div id="main_text">
+  <div id="maintext">
     <%= t("index.bold")%>
 
   </div>
-  <div class="sub_text">
+  <div class="subtext">
     <strong> Villa Taika </strong> 
     <%= t("index.text")%>
   </div>
