--- a/app/views/standard.html.erb
+++ b/app/views/standard.html.erb
@@ -1,7 +1,7 @@
 <% ["rose","sky"].each do |room| %>
   <div class="box">
-    <div class="box_inner">
-      <div class="captioned_image">
+    <div class="boxinner">
+      <div class="captionedimage">
         <a href="/images/<%=room%>.jpg" rel="lightbox[standard]" title="<%=t(room+".short")%>">
           <img src="/images/<%=room%>_small.jpg" />
         </a>
