--- a/public/stylesheets/stylesheet.css
+++ b/public/stylesheets/stylesheet.css
@@ -4,7 +4,7 @@ body
 {
   font-size: 14px;
   font-family: georgia, "times new roman", serif;
-  background: white;
+  background: #ffffff;
 }
 
 a
@@ -37,33 +37,6 @@ width: 100%;
 height: 104px;
 color: #ffffff;
   background: #ffffff;
-}
-
-#header_inner
-{
-position: relative;
-left: 162px;
-height: 104px;
-margin: 0px auto;
-}
-
-
-#header_inner h1
-{
-background: inherit;
-position: absolute;
-left: 0px;
-bottom: 10px;
-font-size: 39px;
-color: #fff;
-font-weight: normal;
-letter-spacing: -2px;
-}
-
-#header_inner h1 span
-{
-background: inherit;
-color: #DADADA;
 }
 
 #slogan
@@ -158,7 +131,7 @@ height: 7px;
   background: url('/images/bbg1.gif') ;
 }
 
-#menu_end
+#menuend
 {
 height: 30px;
 background: url('/images/a2.gif');
@@ -339,7 +312,7 @@ font-size: 20px;
 margin-bottom: 5px
 }
 
-.box_inner
+.boxinner
 {
 border: solid 1px #fff;
 padding: 16px;
@@ -349,14 +322,14 @@ line-height: 1.4em;
 
 }
 
-#rcontent div.activitybox div.box_inner {
+#rcontent div.activitybox div.boxinner {
 padding-top: 5px;  
 padding-left: 5px;  
 padding-top: 5px;
   text-align: justify;
 }
 
-.captioned_image
+.captionedimage
 {
 position: relative;
 padding-bottom: 15px;
@@ -364,7 +337,7 @@ float: left;
 margin-right: 17px;
 }
 
-.captioned_image div
+.captionedimage div
 {
 position: absolute;
 font-size: 9px;
@@ -427,7 +400,7 @@ div#aurinko {
   position: relative;
 }
 
-div#aurinko_wrapper {
+div#aurinkowrapper {
   height: 330px;
   width: 500px;
   margin-left:0px;
@@ -440,7 +413,7 @@ div#aurinko_wrapper {
   padding-top: 22px;
 }
 
-div#main_text {
+div#maintext {
   font-weight: bold; 
   font-size: 16px;
   color: #008495;
@@ -449,7 +422,7 @@ div#main_text {
   float:  left;
 }
 
-.sub_text {
+.subtext {
   width:510px;
   height: 40px;
   margin-top: 10px;
@@ -492,7 +465,7 @@ div.kolmas {
   border: 2px solid #c1cabb;
 }
 
-div.room_header {
+div.roomheader {
   font-size: 120%;
   line-height: 1.2em;
   margin-bottom: 21px;
@@ -502,12 +475,12 @@ img {
   border-style: none;
 }
 
-#rcontent div.activitybox div.box_inner a img {
+#rcontent div.activitybox div.boxinner a img {
   float: left;
   margin-right: 10px;
 }
 
-#rcontent div.activitybox div.box_inner a h2 {
+#rcontent div.activitybox div.boxinner a h2 {
   margin-bottom: 10px;
 }
 
