--- a/app/views/deluxe.html.erb
+++ b/app/views/deluxe.html.erb
@@ -1,7 +1,7 @@
 <% ["green" , "orange" ].each do |room| %>
   <div class="box">
-    <div class="box_inner">
-      <div class="captioned_image">
+    <div class="boxinner">
+      <div class="captionedimage">
         <a href="/images/<%=room%>.jpg" rel="lightbox[deluxe]" title="<%=t(room+".short")%>">
           <img src="/images/<%=room%>_small.jpg" alt='<%=t("#{room}.short")%>'/>
         </a>
