--- a/app/views/suites.html.erb
+++ b/app/views/suites.html.erb
@@ -1,7 +1,7 @@
 <% ["lootus" , "sun" , "ametist"].each do |room| %>
   <div class="box">
-    <div class="box_inner">
-      <div class="captioned_image">
+    <div class="boxinner">
+      <div class="captionedimage">
         <a href="/images/<%=room%>.jpg" rel="lightbox[suites]" title="<%=t(room+".short")%>">
           <img src="/images/<%=room%>_small.jpg" />
         </a>
