--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <link href="/stylesheets/lightbox.css" media="screen" rel="stylesheet" type="text/css" /> 
-  <link href="/stylesheets/styles.css" media="screen" rel="stylesheet" type="text/css" /> 
-  <script src="/javascripts/prototype.js" type="text/javascript"></script> 
-  <script src="/javascripts/effects.js" type="text/javascript"></script> 
-  <script src="/javascripts/prototype.js" type="text/javascript"></script> 
-  <script src="/javascripts/scriptaculous.js?load=effects,builder" type="text/javascript"></script> 
-  <script src="/javascripts/lightbox.js" type="text/javascript"></script> 
+  <link href="../stylesheets/lightbox.css" media="screen" rel="stylesheet" type="text/css" />
+
+  <script src="../javascripts/prototype.js" type="text/javascript"></script>
+  <script src="../javascripts/scriptaculous.js?load=effects,builder" type="text/javascript"></script>
+  <script src="../javascripts/lightbox.js" type="text/javascript"></script>
+
+  <link href="../stylesheets/styles.css" media="screen" rel="stylesheet" type="text/css" />
 
   <link href="/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
