fixed menu, adds booking

--- a/app/views/booking.html.erb
+++ b/app/views/booking.html.erb
@@ -7,52 +7,50 @@
       teesen();
       $show_form = 0 ;
       ?> 
-      Your booking was received. <br/><br/> 
+      <%== t('.received')%> <br/><br/> 
       <?php 
     } else { 
     ?> 
-       Please fill out all fields, and check your email and date. <br/><br/> 
+       <%== t('.error')%> <br/>
     <?php 
     }; 
   }; 
 if ($show_form )   { 
     ?> 
 <br/> 
-You can book by phone , +358407046699 between 10:00 and 19:00, or send us mail, or use the form below. <br/ ><br/ > 
-Please fill out all fields. If you do do not want to book a certain room, you may use Suite/Deluxe/standard for the room field. <br/> 
-Also remember that all rooms have a double bed. So if there is more than 2 of you, please add to the comment. <br/> 
+ <%== t('.booking')%> <br/><br/> 
  
 <form action="booking.php" method="post"> 
   <table border="0" cellpadding="8" cellspacing="8"> 
     <tr> 
-      <td><label for="name">Name</label>:</td> 
+      <td><label for="name"><%= t('.name')%></label>:</td> 
       <input type="hidden" name="language" value="fi" /> 
       <td><input type="text" name="name" id="name" size="35" 
       <?php if (isset($_POST['name']) ) print "value='" . $_POST['name'] . "'"  ; ?>  />
       </input>
         </td> 
-      <td><label for="email">Email address</label>:</td> 
+      <td><label for="email"><%= t('.email')%></label>:</td> 
       <td><input type="text" id="email" name="email" size="35" 
         <?php if (isset($_POST['email']) ) print "value='" . $_POST['email'] . "'"  ; ?> /></td> 
     </tr> 
     <tr> 
-      <td><label for="arrival">Date of arrival</label>:</td> 
+      <td><label for="arrival"><%= t('.arrival')%></label>:</td> 
       <td><input type="text" id="arrival" name="arrival" size="35" 
         <?php if (isset($_POST['arrival']) ) print "value='" . $_POST['arrival'] . "'"  ; ?> /></td> 
-      <td><label for="phone">Phone</label>:</td> 
+      <td><label for="phone"><%= t('.phone')%></label>:</td> 
       <td><input type="text" id="phone" name="phone" size="35" 
         <?php if (isset($_POST['phone']) ) print "value='" . $_POST['phone'] . "'"  ; ?> /></td> 
     </tr> 
     <tr> 
-      <td><label for="nights">Nights</label>:</td> 
+      <td><label for="nights"><%= t('.nights')%></label>:</td> 
       <td><select name="nights"> <option></option> <option>1</option> <option>2</option><option>3</option> 
-        <option>Call!</option>  </select></td> 
-      <td><label for="room">Room</label>:</td> 
+        <option><%= t('.call')%></option>  </select></td> 
+      <td><label for="room"><%= t('.room')%></label>:</td> 
       <td><input type="text" id="room" name="room" size="35" 
         <?php if (isset($_POST['room']) ) print "value='" . $_POST['room'] . "'"  ; ?>/></td> 
     </tr> 
     <tr> 
-      <td> <label for="comment">Comment</label><br /> </td> 
+      <td> <label for="comment"><%= t('.comment')%></label><br /> </td> 
       <td> <textarea rows="2" cols="35" name="comment" id="comment"
         ><?php if (isset($_POST['comment']) ) print  $_POST['comment']  ?> </textarea> </td> 
       <td colspan="2"><input type="submit" name="submit" value="Send booking" /></td> 
@@ -64,11 +62,16 @@ Also remember that all rooms have a double bed. So if there is more than 2 of yo
 }; 
 ?> 
  
-Booking request are subject to confirmation. <br/> <br/> 
+<%== t('.confirmation')%> <br/> <br/> 
  
-If you wish to pay upon confirmation, our bank account is  <br/> 
- 
-Alternatively you can use Payson with our email. <br/> 
- 
-Otherwise the charge is due upon arrival and must be paid in cash.
- 
+<%== t('.pay')%>
+
+<br/> <br/> <br/> 
+<%== t('.payson')%>
+<br/> 
+<a href="https://www.payson.fi/SendMoney/?De=Standard+%2f+Delux&Se=info%40villataika.fi&Cost=75%2c00&Currency=EUR&&Sp=1" title="Payson internetbetalningar" style="width: 170px; height: 55px; background: url('https://www.payson.se/sites/all/files/images/external/PayBtn_BgImg_Clean.png') no-repeat scroll 0% 0% transparent; display: block; text-indent: 45px; padding-top: 15px; text-decoration: none; font-size: 13px; font-family: Arial; font-weight: bold; color: #00245D;">Pay Standard 75 &euro;</a>
+
+<a href="https://www.payson.fi/SendMoney/?De=Suite&Se=info%40villataika.fi&Cost=90%2c00&Currency=EUR&&Sp=1" title="Payson internetbetalningar" style="width: 170px; height: 55px; background: url('https://www.payson.se/sites/all/files/images/external/PayBtn_BgImg_Clean.png') no-repeat scroll 0% 0% transparent; display: block; text-indent: 45px; padding-top: 15px; text-decoration: none; font-size: 13px; font-family: Arial; font-weight: bold; color: #00245D;">Pay Suite 90 &euro;</a>
+
+
+
