--- a/app/views/booking.html.erb
+++ b/app/views/booking.html.erb
@@ -24,7 +24,7 @@ if ($show_form )   {
   <table border="0" cellpadding="8" cellspacing="8"> 
     <tr> 
       <td><label for="name"><%= t('.name')%></label>:</td> 
-      <input type="hidden" name="language" value="fi" /> 
+      <input type="hidden" name="lang" value="<%=@locale%>" /> 
       <td><input type="text" name="name" id="name" size="35" 
       <?php if (isset($_POST['name']) ) print "value='" . $_POST['name'] . "'"  ; ?>  />
       </input>
