--- a/villataika.fi/stylesheets/styles.css
+++ b/villataika.fi/stylesheets/styles.css
@@ -302,12 +302,13 @@ border-bottom: solid 1px #c0dce0;
 height: 180px;
 }
 
-.box h2
+.boxinner h2
 {
 color: #008495;
 font-weight: normal;
 font-size: 20px;
-margin-bottom: 5px
+margin-bottom: 5px ;
+margin-top: 0px ;
 }
 
 .boxinner
@@ -498,4 +499,5 @@ line-height: 18px;
 border-bottom: solid 1px #c0dce0;
   float: left;
   width : 100%;
+  margin-bottom: 10px;
 }
