--- a/app/views/booking/booking.html.erb
+++ b/app/views/booking/booking.html.erb
@@ -49,3 +49,24 @@
 <%== t('booking.confirmation')%> <br/> <br/> 
  
 <%== t('booking.pay')%>
+
+
+<!-- Google Code for book Conversion Page -->
+<script type="text/javascript">
+/* <![CDATA[ */
+var google_conversion_id = 1061735831;
+var google_conversion_language = "en";
+var google_conversion_format = "3";
+var google_conversion_color = "ffffff";
+var google_conversion_label = "6IfrCOWd_gEQl5uj-gM";
+var google_conversion_value = 0;
+/* ]]> */
+</script>
+<script type="text/javascript" src="http://www.googleadservices.com/pagead/conversion.js">
+</script>
+<noscript>
+<div style="display:inline;">
+<img height="1" width="1" style="border-style:none;" alt="" src="http://www.googleadservices.com/pagead/conversion/1061735831/?label=6IfrCOWd_gEQl5uj-gM&amp;guid=ON&amp;script=0"/>
+</div>
+</noscript>
+
