--- a/app/views/suites.html.erb
+++ b/app/views/suites.html.erb
@@ -1,4 +1,4 @@
-<% ["lootus" , "sun" , "ametist"].each do |room| %>
+<% ["lootus" , "sun" , "saffron"].each do |room| %>
   <div class="box">
     <div class="boxinner">
       <div class="captionedimage">
