--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,10 @@
   <script src="../javascripts/scriptaculous.js?load=effects,builder" type="text/javascript"></script>
   <script src="../javascripts/lightbox.js" type="text/javascript"></script>
 
-  <link href="../stylesheets/styles.css" media="screen" rel="stylesheet" type="text/css" />
+  <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= javascript_include_tag "application" %>
+  <%= csrf_meta_tags %>
+    <link href="../stylesheets/styles.css" media="screen" rel="stylesheet" type="text/css" />
 
   <link href="/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
